# touchdeck

./: Cargo.toml  README.md  build.rs  config.example.env  touchdeck.example.toml
docs/: input-routing.md  usage-scenarios.md
examples/layouts/: README.md
examples/layouts/keymaps/: balanced-3x10.toml  symbol-heavy-3x10.toml  terminal-3x10.toml
examples/layouts/profiles/: default-3x10.toml  default-phone.toml  one-hand-right.toml  split-thumb.toml  staggered-qwerty.toml
scripts/: check.sh  run-debug.sh  run.sh
src/: action.rs  action_executor.rs  config.rs  engine.rs  evdev_touch.rs  geometry.rs  gesture.rs  ime_overlay.rs  key.rs  keymap.rs  layout.rs  lib.rs  main.rs  mode.rs  niri.rs  niri_backend.rs  protocol.rs  renderer.rs  rime.rs  sunshine_router.rs  trace.rs  wayland_overlay.rs  x11_geometry.rs
src/ime/: app_state.rs  event.rs  fcitx_dbus.rs  key.rs  mod.rs  physical_keyboard.rs  popup.rs  rime_engine.rs  touchdeck_socket.rs
