[package]
name = "touchdeck-prototype"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
libc = "0.2"
memmap2 = "0.9"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
