[package]
name = "touchdeck"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
cosmic-text = "0.19"
libc = "0.2"
memmap2 = "0.9"
niri-ipc = { path = "/home/disk/Projects/niri/niri-ipc", features = ["clap"] }
clap = "4.6"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
x11rb = { version = "0.13", default-features = false }
xim = { version = "0.5", default-features = false, features = ["x11rb-server"] }
xkbcommon = "0.9.0"
zbus = { version = "5.14", features = ["blocking-api"] }

[patch.crates-io]
xim = { path = "vendor/xim" }
